--- a/views/login.html
+++ b/views/login.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
-    <form>
+    <form id="form_login">
         <h1>Login</h1>
         <label for="email" id="email" >email</label>
         <input type="text" placeholder="correo electronico" id="email">
         <label for="password" id="password">Contraseña</label>
         <input type="email" id="password">
+        <button id="btn_login">Entrar</button>
     </form>
     
 </body>
