featuree with Menu

--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,7 @@
         <h1>🎫cupones</h1>
         <h1>🛒tienda</h1>
         <h1>🛵Metodo de entrega</h1>
+        <h1>🍽️ <a href="/restaurante-gitflow/views/galery.html">Menú</a>  </h1>
     </nav>
 </body>
 </html>
