--- a/styles/login.css
+++ b/styles/login.css
@@ -1,8 +1,9 @@
-.form_login{
+#form_login{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
+    background-color: aqua;
 }
